// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Confirmation Modal basic 1`] = `
.c1 {
  background-color: #D6DEE9;
  color: #53616E;
}

.c2 {
  visibility: visible;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  position: relative;
  cursor: pointer;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-decoration: none;
  border-radius: 2px;
  outline: 0;
  line-height: 1.43;
  text-align: center;
  height: 40px;
  min-width: 40px;
  font-size: 14px;
  padding: 10px 16px;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.65;
}

.c0:focus:not(:disabled),
.c0:hover:not(:disabled) {
  color: #53616E;
  background-color: #C8D0DB;
}

.c0:active:not(:disabled) {
  color: #53616E;
  background-color: #BCC4CF;
}

.c0:focus:not(:disabled) {
  box-shadow: 0 0 0 2px rgba(18,52,102,0.1);
}

<div
  className=""
>
  <div
    onKeyDown={[Function]}
  />
  <button
    className="c0 c1 "
    disabled={false}
    mode="normal"
    onClick={[Function]}
    type="button"
  >
    <div
      className="c2 "
    >
      Show modal
    </div>
  </button>
</div>
`;

exports[`Storyshots Confirmation Modal in redux form 1`] = `
.c1 {
  background-color: #D6DEE9;
  color: #53616E;
}

.c2 {
  visibility: visible;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  position: relative;
  cursor: pointer;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-decoration: none;
  border-radius: 2px;
  outline: 0;
  line-height: 1.43;
  text-align: center;
  height: 40px;
  min-width: 40px;
  font-size: 14px;
  padding: 10px 16px;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.65;
}

.c0:focus:not(:disabled),
.c0:hover:not(:disabled) {
  color: #53616E;
  background-color: #C8D0DB;
}

.c0:active:not(:disabled) {
  color: #53616E;
  background-color: #BCC4CF;
}

.c0:focus:not(:disabled) {
  box-shadow: 0 0 0 2px rgba(18,52,102,0.1);
}

<div
  className=""
>
  <form
    onSubmit={[Function]}
  >
    <div
      onKeyDown={[Function]}
    />
    <button
      className="c0 c1 "
      disabled={false}
      mode="normal"
      onClick={[Function]}
      type="button"
    >
      <div
        className="c2 "
      >
        Show modal
      </div>
    </button>
  </form>
</div>
`;

exports[`Storyshots Modal default 1`] = `
.c1 {
  background-color: #D6DEE9;
  color: #53616E;
}

.c2 {
  visibility: visible;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  position: relative;
  cursor: pointer;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-decoration: none;
  border-radius: 2px;
  outline: 0;
  line-height: 1.43;
  text-align: center;
  height: 40px;
  min-width: 40px;
  font-size: 14px;
  padding: 10px 16px;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.65;
}

.c0:focus:not(:disabled),
.c0:hover:not(:disabled) {
  color: #53616E;
  background-color: #C8D0DB;
}

.c0:active:not(:disabled) {
  color: #53616E;
  background-color: #BCC4CF;
}

.c0:focus:not(:disabled) {
  box-shadow: 0 0 0 2px rgba(18,52,102,0.1);
}

<div
  className=""
>
  <div
    onKeyDown={[Function]}
  />
  <button
    className="c0 c1 "
    disabled={false}
    mode="normal"
    onClick={[Function]}
    type="button"
  >
    <div
      className="c2 "
    >
      Show modal
    </div>
  </button>
</div>
`;

exports[`Storyshots Modal multiple modals 1`] = `
.c1 {
  background-color: #D6DEE9;
  color: #53616E;
}

.c2 {
  visibility: visible;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  position: relative;
  cursor: pointer;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-decoration: none;
  border-radius: 2px;
  outline: 0;
  line-height: 1.43;
  text-align: center;
  height: 40px;
  min-width: 40px;
  font-size: 14px;
  padding: 10px 16px;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.65;
}

.c0:focus:not(:disabled),
.c0:hover:not(:disabled) {
  color: #53616E;
  background-color: #C8D0DB;
}

.c0:active:not(:disabled) {
  color: #53616E;
  background-color: #BCC4CF;
}

.c0:focus:not(:disabled) {
  box-shadow: 0 0 0 2px rgba(18,52,102,0.1);
}

<div
  className=""
>
  <div
    onKeyDown={[Function]}
  />
  <div
    onKeyDown={[Function]}
  />
  <div
    onKeyDown={[Function]}
  />
  <button
    className="c0 c1 "
    disabled={false}
    mode="normal"
    onClick={[Function]}
    type="button"
  >
    <div
      className="c2 "
    >
      Show modal
    </div>
  </button>
  <button
    className="c0 c1 "
    disabled={false}
    mode="normal"
    onClick={[Function]}
    type="button"
  >
    <div
      className="c2 "
    >
      Show modal
    </div>
  </button>
  <button
    className="c0 c1 "
    disabled={false}
    mode="normal"
    onClick={[Function]}
    type="button"
  >
    <div
      className="c2 "
    >
      Show modal
    </div>
  </button>
</div>
`;
